unpackaged/main/default/objects/Account/fields/Account_Balance__c.field-meta.xml
<CustomField>
    <fullName>Account_Balance__c</fullName>
    <formula>Outstanding_Balance_Incl_VAT__c -  Unallocated_Account_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>