unpackaged/main/default/objects/Account/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <description>Account Reference - Used for Exchequer reference</description>
    <displayFormat>A{00000}</displayFormat>
    <externalId>true</externalId>
    <label>Account Reference</label>
    <type>AutoNumber</type>
</CustomField>