unpackaged/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>This defines the terms of the account including charge and payment terms.</description>
    <inlineHelpText>This defines the terms of the account including charge and payment terms.</inlineHelpText>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>