unpackaged/main/default/objects/Account/fields/Approved_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Approved_Supplier__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this Supplier been approved - i.e. not just one created by an Operative?</description>
    <inlineHelpText>Has this Supplier been approved - i.e. not just one created by an Operative?</inlineHelpText>
    <label>Approved Supplier</label>
    <type>Checkbox</type>
</CustomField>