unpackaged/main/default/objects/Account/fields/Attendance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>The Maximum value for this field is 999.99.</description>
    <inlineHelpText>The Maximum value for this field is 999.99.</inlineHelpText>
    <label>Attendance Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>