unpackaged/main/default/objects/Account/fields/Book_Online_URL__c.field-meta.xml
<CustomField>
    <fullName>Book_Online_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,&quot;https://aspect.co.uk&quot;,&quot;https://aspect.co.uk.hyv.gotest.it&quot;)&amp; 
&quot;/book-now/?id=&quot;&amp;Id&amp; 
&quot;&amp;acc=&quot;&amp; Id &amp; 
&quot;&amp;acn=&quot;&amp; Account_Reference__c &amp; 
&quot;&amp;exc=&quot;&amp; IF(ISBLANK(Voucher_Code__c),&quot;Yes&quot;,&quot;&quot;)&amp; 
&quot;&amp;fn=&quot;&amp;SUBSTITUTE( First_Name__c , &quot; &quot;, &quot;%20&quot;) &amp; 
&quot;&amp;ln=&quot;&amp;SUBSTITUTE( Last_Name__c , &quot; &quot;, &quot;%20&quot;) &amp; 
&quot;&amp;ema=&quot;&amp; Email__c &amp; 
&quot;&amp;pho=&quot;&amp; SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;) &amp; 

&quot;&amp;as=&quot;&amp;SUBSTITUTE( TEXT(AccountSource), &quot; &quot;, &quot;%20&quot;) &amp; 
&quot;&amp;bvc=&quot;&amp;  Voucher_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Book Online URL</label>
    <type>Text</type>
</CustomField>