unpackaged/main/default/objects/Account/fields/Buyapowa_Dashboard_URL__c.field-meta.xml
<CustomField>
    <fullName>Buyapowa_Dashboard_URL__c</fullName>
    <label>Buyapowa Dashboard URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>