unpackaged/main/default/objects/Account/fields/Buyapowa_Share_URL__c.field-meta.xml
<CustomField>
    <fullName>Buyapowa_Share_URL__c</fullName>
    <label>Buyapowa Share URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>