unpackaged/main/default/objects/Account/fields/Buyapowa_Signup_Status__c.field-meta.xml
<CustomField>
    <fullName>Buyapowa_Signup_Status__c</fullName>
    <label>Buyapowa Signup Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>