unpackaged/main/default/objects/Account/fields/Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total__c</fullName>
    <label>Charge Total</label>
    <summarizedField>Site__c.Charge_Total__c</summarizedField>
    <summaryForeignKey>Site__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>