unpackaged/main/default/objects/Account/fields/Client_Alert_1__c.field-meta.xml
<CustomField>
    <fullName>Client_Alert_1__c</fullName>
    <description>Alert on account level 1</description>
    <label>Client Alert 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>