unpackaged/main/default/objects/Account/fields/Client_Alert_2__c.field-meta.xml
<CustomField>
    <fullName>Client_Alert_2__c</fullName>
    <description>Alert on account level 2</description>
    <label>Client Alert 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>