unpackaged/main/default/objects/Account/fields/Client_Alert__c.field-meta.xml
<CustomField>
    <fullName>Client_Alert__c</fullName>
    <label>Client Alert</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>