unpackaged/main/default/objects/Account/fields/Client_Industry__c.field-meta.xml
<CustomField>
    <fullName>Client_Industry__c</fullName>
    <description>Custom Industry field</description>
    <label>Client Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Care homes</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hotels</fullName>
            </value>
            <value>
                <fullName>Leisure &amp; Fitness</fullName>
            </value>
            <value>
                <fullName>New builds</fullName>
            </value>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Private landlord</fullName>
            </value>
            <value>
                <fullName>Property management</fullName>
            </value>
            <value>
                <fullName>Referral clients</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Claims &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
            </value>
            <value>
                <fullName>New builds - snagging work</fullName>
                <isActive>false</isActive>
                <label>New builds - snagging work</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Residential</fullName>
                <isActive>false</isActive>
                <label>Residential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>