unpackaged/main/default/objects/Account/fields/Comms_Control_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Credit_Note__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Comms Control Credit Note</label>
    <type>Checkbox</type>
</CustomField>