unpackaged/main/default/objects/Account/fields/Comms_Control_Estimate_Emails__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Estimate_Emails__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Comms Control Estimate Emails</label>
    <type>Checkbox</type>
</CustomField>