unpackaged/main/default/objects/Account/fields/Comms_Control_In_transit_text__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_In_transit_text__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Comms Control In transit text</label>
    <type>Checkbox</type>
</CustomField>