unpackaged/main/default/objects/Account/fields/Comms_Control_Invoice_Job_complete__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Invoice_Job_complete__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Comms Control Invoice produced on completion of Job</inlineHelpText>
    <label>Comms Control Invoice Job complete</label>
    <type>Checkbox</type>
</CustomField>