unpackaged/main/default/objects/Account/fields/Comms_Control_Online_Booking__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Online_Booking__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Credit Account Communications</description>
    <label>Comms Controls Booking Confirmation</label>
    <type>Checkbox</type>
</CustomField>