unpackaged/main/default/objects/Account/fields/Comms_Control_Refund_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Refund_Confirmation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Comms Control Refund Confirmation</label>
    <type>Checkbox</type>
</CustomField>