unpackaged/main/default/objects/Account/fields/Comms_Control_Request_of_pay__c.field-meta.xml
<CustomField>
    <fullName>Comms_Control_Request_of_pay__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Comms Control Request of payment goes to client</inlineHelpText>
    <label>Comms Control Request of pay</label>
    <type>Checkbox</type>
</CustomField>