unpackaged/main/default/objects/Account/fields/Confirmed_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Referrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmed Referrer</label>
    <type>Checkbox</type>
</CustomField>