unpackaged/main/default/objects/Account/fields/contact_bill_payer__c.field-meta.xml
<CustomField>
    <fullName>contact_bill_payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill Payer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>