unpackaged/main/default/objects/Account/fields/Contact_Via_Email_URL__c.field-meta.xml
<CustomField>
    <fullName>Contact_Via_Email_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,&quot;https://aspect.co.uk&quot;,&quot;https://aspect.co.uk.hyv.gotest.it&quot;)&amp; 

&quot;/contact-via-email/?id=&quot;&amp;Id&amp; 

&quot;&amp;acc=&quot;&amp; Id &amp; 

&quot;&amp;con=&quot;&amp; contact_bill_payer__c &amp; 

&quot;&amp;fn=&quot;&amp;SUBSTITUTE( First_Name__c , &quot; &quot;, &quot;%20&quot;) &amp; 
&quot;&amp;ln=&quot;&amp;SUBSTITUTE( Last_Name__c , &quot; &quot;, &quot;%20&quot;) &amp; 

&quot;&amp;ema=&quot;&amp; Email__c &amp; 

&quot;&amp;pho=&quot;&amp; SUBSTITUTE(Phone,&quot; &quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Via Email URL</label>
    <type>Text</type>
</CustomField>