unpackaged/main/default/objects/Account/fields/Cost_Total__c.field-meta.xml
<CustomField>
    <fullName>Cost_Total__c</fullName>
    <label>Cost Total</label>
    <summarizedField>Site__c.Cost_Total__c</summarizedField>
    <summaryForeignKey>Site__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>