unpackaged/main/default/objects/Account/fields/Count_of_Rate_Cards__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Rate_Cards__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Populated by Flow, counts the number of Related Rate Cards to the Account</description>
    <inlineHelpText>Number of Related Rate Cards to the Account</inlineHelpText>
    <label>Count of Rate Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>