unpackaged/main/default/objects/Account/fields/Dont_Send_out_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Dont_Send_out_Estimates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is ticked then Estimates should not be sent out to Customers by Operatives</description>
    <inlineHelpText>If this checkbox is ticked then Estimates should not be sent out to Customers by Operatives</inlineHelpText>
    <label>Dont Send out Estimates</label>
    <type>Checkbox</type>
</CustomField>