unpackaged/main/default/objects/Account/fields/DRC_Applies__c.field-meta.xml
<CustomField>
    <fullName>DRC_Applies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, DRC applies and all invoices will exclude VAT. This field is controlled by Credit Control.</description>
    <inlineHelpText>When checked, DRC applies and all invoices will exclude VAT. This field is controlled by Credit Control.</inlineHelpText>
    <label>DRC Applies</label>
    <type>Checkbox</type>
</CustomField>