unpackaged/main/default/objects/Account/fields/Duplicate_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Account_Id__c</fullName>
    <label>Duplicate Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>