unpackaged/main/default/objects/Account/fields/Exchequer_Department_Ref__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_Department_Ref__c</fullName>
    <description>Exchequer Integration - Department ref used on Supplier Invoices
IS THIS NEEDED?</description>
    <inlineHelpText>Exchequer Integration - Department ref used on Supplier Invoices</inlineHelpText>
    <label>Exchequer Department Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>