unpackaged/main/default/objects/Account/fields/Exchequer_Ref__c.field-meta.xml
<CustomField>
    <fullName>Exchequer_Ref__c</fullName>
    <description>Exchequer Integration - if not blank overrides Chumley generated Account Reference</description>
    <inlineHelpText>Account reference used in Exchequer export - overrides Chumley generated Account Reference</inlineHelpText>
    <label>Exchequer Ref</label>
    <length>50</length>
    <type>Text</type>
</CustomField>