unpackaged/main/default/objects/Account/fields/Info_No_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Info_No_of_Sites__c</fullName>
    <label>Info No. of Sites</label>
    <summaryForeignKey>Site__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>