unpackaged/main/default/objects/Account/fields/Info_No_of_WOs__c.field-meta.xml
<CustomField>
    <fullName>Info_No_of_WOs__c</fullName>
    <label>Info No. of WOs</label>
    <summarizedField>Site__c.Info_No_of_WOs__c</summarizedField>
    <summaryForeignKey>Site__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>