unpackaged/main/default/objects/Account/fields/Invoice_Count__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Count__c</fullName>
    <description>Invoice Count</description>
    <inlineHelpText>Roll up - count of invoice records on account</inlineHelpText>
    <label>Invoice Count</label>
    <summaryForeignKey>Customer_Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>