unpackaged/main/default/objects/Account/fields/Invoice_Credit_Gross__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Credit_Gross__c</fullName>
    <label>Invoice Credit Gross</label>
    <summarizedField>Customer_Invoice__c.Customer_Credit_Total__c</summarizedField>
    <summaryForeignKey>Customer_Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>