unpackaged/main/default/objects/Account/fields/Invoice_Gross__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Gross__c</fullName>
    <inlineHelpText>Roll up - sum of &quot;Gross charge&quot; for all related Customer Invoices.</inlineHelpText>
    <label>Invoice Gross</label>
    <summarizedField>Customer_Invoice__c.Charge_Gross__c</summarizedField>
    <summaryForeignKey>Customer_Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>