unpackaged/main/default/objects/Account/fields/Invoice_minus_Credit__c.field-meta.xml
<CustomField>
    <fullName>Invoice_minus_Credit__c</fullName>
    <formula>Invoice_Gross__c - Invoice_Credit_Gross__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice minus Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>