unpackaged/main/default/objects/Account/fields/Invoice_Net__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Net__c</fullName>
    <label>Invoice Net</label>
    <summarizedField>Customer_Invoice__c.Charge_Net__c</summarizedField>
    <summaryForeignKey>Customer_Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>