unpackaged/main/default/objects/Account/fields/Invoice_Payments__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Payments__c</fullName>
    <label>Invoice Payments</label>
    <summarizedField>Customer_Invoice__c.Sum_of_Payments__c</summarizedField>
    <summaryForeignKey>Customer_Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>