unpackaged/main/default/objects/Account/fields/Invoicing_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Email_Address__c</fullName>
    <description>Purpose is to send bulk invoices to a Customer. If this field is populated then the system should send the email to the email address on the field else it should use the Customer&#39;s email address</description>
    <label>Invoicing Email Address</label>
    <type>Email</type>
</CustomField>