unpackaged/main/default/objects/Account/fields/Is_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To Identify that this Account is also a partner acount or not</inlineHelpText>
    <label>Is Partner Account?</label>
    <type>Checkbox</type>
</CustomField>