unpackaged/main/default/objects/Account/fields/Is_Provider_a_Franchisee__c.field-meta.xml
<CustomField>
    <fullName>Is_Provider_a_Franchisee__c</fullName>
    <description>Determines whether the Provider is a Franchisee or not</description>
    <label>Is Provider a Franchisee?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>