unpackaged/main/default/objects/Account/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <label>Last Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>