unpackaged/main/default/objects/Account/fields/On_Standard_Rates__c.field-meta.xml
<CustomField>
    <fullName>On_Standard_Rates__c</fullName>
    <description>Does the Account have any Rate Cards associated with it?</description>
    <formula>IF(Count_of_Rate_Cards__c&gt;0,false,true)</formula>
    <inlineHelpText>Does the Account have any Rate Cards associated with it?</inlineHelpText>
    <label>On Standard Rates?</label>
    <type>Checkbox</type>
</CustomField>