unpackaged/main/default/objects/Account/fields/Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Onboarding__c</fullName>
    <label>Onboarding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Damian New</fullName>
            </value>
            <value>
                <fullName>Damian Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>