unpackaged/main/default/objects/Account/fields/Outstanding_Balance_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Incl_VAT__c</fullName>
    <description>The Total Outstanding Balance (Incl. VAT) from All Customer Invoices</description>
    <inlineHelpText>The Total Outstanding Balance (Incl. VAT) from All Customer Invoices</inlineHelpText>
    <label>Outstanding Balance (Incl. VAT)</label>
    <summarizedField>Customer_Invoice__c.Balance_Outstanding_with_Interest__c</summarizedField>
    <summaryForeignKey>Customer_Invoice__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>