unpackaged/main/default/objects/Account/fields/Pending_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Pending_Referrer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Referrer</label>
    <type>Checkbox</type>
</CustomField>