unpackaged/main/default/objects/Account/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Card</label>
    <referenceTo>Rate_Card_Account__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>