unpackaged/main/default/objects/Account/fields/Referral_notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_notes__c</fullName>
    <label>Referral notes</label>
    <type>TextArea</type>
</CustomField>