unpackaged/main/default/objects/Account/fields/Referral_Opt_In_Time__c.field-meta.xml
<CustomField>
    <fullName>Referral_Opt_In_Time__c</fullName>
    <label>Referral Opt In Time</label>
    <type>DateTime</type>
</CustomField>