unpackaged/main/default/objects/Account/fields/Referrer_Join_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Join_Date_Time__c</fullName>
    <label>Referrer Join Date/Time</label>
    <type>DateTime</type>
</CustomField>