unpackaged/main/default/objects/Account/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Custom Industry Sector field</description>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claims &amp; Utilities</fullName>
            </value>
            <value>
                <fullName>Managed Referral &amp; New Build Property</fullName>
            </value>
            <value>
                <fullName>Education &amp; Healthcare</fullName>
            </value>
            <value>
                <fullName>Commercial Retail &amp; Leisure</fullName>
            </value>
            <value>
                <fullName>Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>Home Owner</fullName>
            </value>
            <value>
                <fullName>Care homes</fullName>
                <isActive>false</isActive>
                <label>Care homes</label>
            </value>
            <value>
                <fullName>Charity</fullName>
                <isActive>false</isActive>
                <label>Charity</label>
            </value>
            <value>
                <fullName>Health &amp; fitness</fullName>
                <isActive>false</isActive>
                <label>Health &amp; fitness</label>
            </value>
            <value>
                <fullName>Health services</fullName>
                <isActive>false</isActive>
                <label>Health services</label>
            </value>
            <value>
                <fullName>Hotels</fullName>
                <isActive>false</isActive>
                <label>Hotels</label>
            </value>
            <value>
                <fullName>Offices</fullName>
                <isActive>false</isActive>
                <label>Offices</label>
            </value>
            <value>
                <fullName>Private landlord</fullName>
                <isActive>false</isActive>
                <label>Private landlord</label>
            </value>
            <value>
                <fullName>Property management</fullName>
                <isActive>false</isActive>
                <label>Property management</label>
            </value>
            <value>
                <fullName>Pubs Restaurants &amp; Bars</fullName>
                <isActive>false</isActive>
                <label>Pubs Restaurants &amp; Bars</label>
            </value>
            <value>
                <fullName>Referral clients</fullName>
                <isActive>false</isActive>
                <label>Referral clients</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <isActive>false</isActive>
                <label>Retail</label>
            </value>
            <value>
                <fullName>Schools</fullName>
                <isActive>false</isActive>
                <label>Schools</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>