unpackaged/main/default/objects/Account/fields/Sent_to_Exchequer__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Exchequer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Exchequer</label>
    <type>Checkbox</type>
</CustomField>