unpackaged/main/default/objects/Account/fields/Supplier_Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Account_Email__c</fullName>
    <description>This is used to form the email address for the related PO&#39;s to the relevant Supplier Account</description>
    <label>Supplier Account Email</label>
    <type>Email</type>
</CustomField>