unpackaged/main/default/objects/Account/fields/Supplier_Service__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Service__c</fullName>
    <description>Indicates whether the supplier is a Sub Contractor or a Supplier of parts and materials</description>
    <label>Supplier Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier_Service</valueSetName>
    </valueSet>
</CustomField>