unpackaged/main/default/objects/Account/fields/Supplier_Trade__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Trade__c</fullName>
    <description>The trade of the Supplier</description>
    <label>Supplier Trade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>