unpackaged/main/default/objects/Account/fields/Supplier_Type__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type__c</fullName>
    <description>Identifies the supplier as Head Office or Branch. If it is Head Office then it will affect invoicing. New Head Office records need to integrate with Exchequer</description>
    <label>Supplier Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier_Type</valueSetName>
    </valueSet>
</CustomField>