unpackaged/main/default/objects/Account/fields/Temp_Check__c.field-meta.xml
<CustomField>
    <fullName>Temp_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temp check added on Alex Bacon request</description>
    <label>Temp Check</label>
    <type>Checkbox</type>
</CustomField>