unpackaged/main/default/objects/Account/fields/Unallocated_Account_Payment__c.field-meta.xml
<CustomField>
    <fullName>Unallocated_Account_Payment__c</fullName>
    <description>Money received by Aspect, which has not yet been allocated to a specific invoice.</description>
    <label>Unallocated Account Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>