unpackaged/main/default/objects/Account/fields/VAT_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>VAT_Registration_Number__c</fullName>
    <description>VAT registration number</description>
    <label>VAT Registration Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>