unpackaged/main/default/objects/Account/recordTypes/Payment_Provider.recordType-meta.xml
<RecordType>
    <fullName>Payment_Provider</fullName>
    <active>true</active>
    <description>Engineer payment provider e.g InSync and Crystal Tax</description>
    <label>Payment Provider</label>
</RecordType>