unpackaged/main/default/objects/Account/recordTypes/Thames_Water.recordType-meta.xml
<RecordType>
    <fullName>Thames_Water</fullName>
    <active>true</active>
    <label>Utilities</label>
</RecordType>