unpackaged/main/default/objects/Account/validationRules/Account_Billing_Street_and_Post_Code_Req.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Billing_Street_and_Post_Code_Req</fullName>
    <active>false</active>
    <description>Billing Street and Post Code are required on Account</description>
    <errorConditionFormula>AND(ISBLANK( BillingStreet ), ISBLANK(  BillingPostalCode ))</errorConditionFormula>
    <errorMessage>Please enter the Billing Street and Post Code</errorMessage>
</ValidationRule>